# sql2pyapi

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  COPYRIGHT  Makefile  README.md  debug_parser.py  pyproject.toml  regenerate_expected.py
docs/: type-aware-composite-analysis.md
examples/: schema2.sql  users.sql  users2.sql
src/sql2py/: generator.py
src/sql2pyapi/: __init__.py  cli.py  comment_parser.py  constants.py  errors.py  generator.py  parser.py  sql_models.py
src/sql2pyapi/generator/: __init__.py  composite_unpacker.py  core.py  dataclass_generator.py  dependency_resolver.py  enum_generator.py  function_generator.py  return_handlers.py  utils.py
src/sql2pyapi/parser/: __init__.py  column_parser.py  composite_parser.py  enum_parser.py  parameter_parser.py  parser.py  return_parser.py  table_parser.py  type_mapper.py  utils.py
src/sql_to_python_api/: cli.py  generator.py  parser.py
temp/: dbapi.py  funcs.sql  schema.sql
tests/: __init__.py  conftest.py  test_generator.py  test_runtime.py  test_utils.py
tests/expected/: array_types_function_api.py  comment_formats_api.py  custom_type_return_api.py  enum_handling_api.py  enum_types_api.py  example_func1_api.py  example_schema1_api.py  func2_api.py  inline_schema_function_api.py  multi_params_function_api.py  no_params_function_api.py  non_qualified_table_api.py  optional_params_function_api.py  param_comments_function_api.py  returns_record_function_api.py  returns_table_comments_function_api.py  returns_table_function_api.py  scalar_function_api.py  schema_qualified_api.py  schema_qualified_example_api.py  setof_missing_table_function_api.py  setof_scalar_function_api.py  single_line_enum_api.py  table_col_comments_api.py  users2_api.py  void_function_api.py
tests/fixtures/: array_types_function.sql  comment_formats.sql  custom_type_return.sql  enum_handling.sql  enum_types.sql  example_func1.sql  example_schema1.sql  inline_schema_function.sql  multi_params_function.sql  no_params_function.sql  non_qualified_table.sql  optional_params_function.sql  param_comments_function.sql  returns_record_function.sql  returns_table_comments_function.sql  returns_table_function.sql  returns_table_language_column.sql  scalar_function.sql  schema_qualified.sql  schema_qualified_example.sql  setof_async_table_function.sql  setof_missing_table_function.sql  setof_scalar_function.sql  single_line_enum.sql  table_col_comments.sql  type_with_comments.sql  void_function.sql
tests/integration/: conftest.py  test_all_list_generation.py  test_all_list_schema_qualified_bug.py  test_column_order_independence.py  test_composite_null_handling.py  test_composite_type_parsing_bug.py  test_composite_type_table_reference_bug.py  test_composite_type_usage.py  test_dependency_ordering_bug.py  test_dict_row_enum_composite.py  test_dict_row_enum_composite_final.py  test_dict_row_enum_composite_fixed.py  test_enum_and_string_mix.py  test_enum_split_files.py  test_enum_types.py  test_gen_comments.py  test_gen_comments.py.skip  test_gen_options.py  test_gen_parameters.py  test_gen_return_types.py  test_gen_schema_handling.py  test_generator.py  test_interval_types.py  test_json_default_parsing.py  test_language_column_name.py  test_metering_point_scenario.py  test_missing_row_type.py  test_nested_composite_string_parsing.py  test_non_qualified_table.py  test_none_row_handling.py  test_numeric_default_null.py  test_optional_enum_handling.py  test_runtime.py  test_schema_qualified.py  test_single_line_enum.py  test_uuid_jsonb_serialization.py
tests/system/: README.md  combine_sql_files.py  conftest.py  docker-compose.yml  generated_db_api.py  test_bug_report_1_default_values.py  test_system.py  test_type_aware_composite_runtime.py
tests/system/sql/: 01_functions.sql  01_functions_basic.sql  01_schema_basic.sql  02_functions_enum_composite.sql  02_schema_enum_composite.sql  03_functions_enum_regression.sql  03_schema_enum_regression.sql
tests/unit/: test_comment_parser_public_api.py  test_composite_types_public_api.py  test_enum_generator.py  test_enum_handling_public_api.py  test_enum_parser.py  test_enum_registry.py  test_enum_types_public_api.py  test_error_handling_public_api.py  test_errors.py  test_file_parser.py  test_numeric_default_null_parsing.py  test_parser.py  test_parser_public_api.py  test_precise_type_matching.py  test_schema_qualified_public_api.py  test_single_line_enum.py  test_type_comment_handling.py
