[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql2py"
version = "0.1.0"
description = "Generate Python async API wrappers from PostgreSQL function definitions."
authors = [
    { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License", # Assuming MIT, change if needed
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Database",
]
dependencies = [
    "typer[all]>=0.9.0,<1.0.0",
    "psycopg[binary,pool]>=3.1.9,<4.0.0", # For generated code
    "inflection>=0.5.1,<1.0.0", # Added for dataclass naming
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0", # Or pin to a specific version range if needed
    "ruff>=0.5.5", # Add ruff
]

[project.urls]
"Homepage" = "" # Add repository URL if available
"Bug Tracker" = "" # Add issue tracker URL if available

[project.scripts]
sql2py = "sql2py.cli:app"

[tool.hatch.version]
path = "src/sql2py/__init__.py" # Optional: manage version in __init__.py

[tool.hatch.build.targets.sdist]
include = ["/src", "/pyproject.toml", "/README.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/sql2py"]

[tool.ruff]
line-length = 120
exclude = [
    "tests/expected",
]
